# elephant_parsel

./: .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-to-test-pypi.yml
docs/source/: conf.py  index.rst
src/elephant_parsel/: postgres_db.py
