[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elephant_parsel"
version = "1.0.0"
authors = [
  { name="betanummeric", email="40263343+betanummeric@users.noreply.github.com" },
]
description = "wrapper for PostgreSQL queries with transaction and connection pooling support"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/betanummeric/elephant_parsel"
"Bug Tracker" = "https://github.com/betanummeric/elephant_parsel/issues"

